--- a/pages/sdkReadmeTest.mdx
+++ b/pages/sdkReadmeTest.mdx
@@ -277,7 +277,7 @@ licensed as above, without any additional terms or conditions.
 
 ## Frontend Integration Guide
 
-⚠️ This is a workaround for using `@drift-labs/sdk`. The SDK includes imports for Node.js modules like fs, which aren't available in browsers.
+⚠️ This is a workaround for `@drift-labs/sdk`. The SDK includes imports Node.js modules like fs, which aren't available in browsers.
 
 ### Fix
 
