--- a/pages/sdkReadmeTest.mdx
+++ b/pages/sdkReadmeTest.mdx
@@ -303,3 +303,14 @@ const nextConfig = {
   },
 };
 ```
+
+And modify your package.json like this:
+```js
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false,
+    "crypto": false
+  },
+```
+
