--- a/pages/tpsl.mdx
+++ b/pages/tpsl.mdx
@@ -8,7 +8,7 @@ Drift supports trigger-based orders to manage trade exits. These can be configur
 The most common use cases for these order types are Stop Loss Market Orders and Take Profit Limit Orders.
 In the following examples, both situations will be covered.
 
-## Key Concepts
+## Notes
 
 It's important to set the correct `triggerCondition` based on the position type:
 
