--- a/pages/jup.mdx
+++ b/pages/jup.mdx
@@ -1,7 +1,7 @@
 # Jupiter Swap Integration Guide
 
 ## Overview
-Drift integrates Jupiter to provide optimal token swap routing on Solana. The `JupiterClient` class in the Drift SDK acts as the bridge to Jupiter’s quote and swap APIs. This can be found at https://github.com/drift-labs/protocol-v2/blob/master/sdk/src/jupiter/jupiterClient.ts
+Drift integrates Jupiter to provide optimal token swap routing on Solana. jupiterClient can be found at https://github.com/drift-labs/protocol-v2/blob/master/sdk/src/jupiter/jupiterClient.ts
 
 ## Requirements
 
