--- a/pages/docstest/dbc.mdx
+++ b/pages/docstest/dbc.mdx
@@ -10,31 +10,32 @@ Drift Builder Codes are currently in **private beta**. If you're interested in p
 
 Drift’s Builder Code (DBC) system enables any builder to build on top of Drift **while earning fees** for routing trades.
 
-Drift Builder Codes establish the financial infrastructure layer on Solana, by allowing anyone tap into Drift’s deep liquidity and efficient execution, without building their own backend. This enables a fully open, composable UI layer for perps and spot on Solana.
+Drift Builder Codes establish the financial infrastructure layer on Solana, by allowing anyone tap into Drift’s deep liquidity and efficient execution, without building their own backend. This enables a fully open, composable UI layer for perps on Solana.
 
 This Builder Code system makes Drift the first on-chain DEX on Solana to offer **per order monetization** for third-party frontends, setting the stage for a permissionless ecosystem of apps, bots, and aggregators all aligned with Drift and Solana’s liquidity growth. 
 
 ### Getting started with DBC
 
 - **Builder Registration:**
-In order to receive fees, builders are required to have an existing Drift account. 
+In order to receive fees, builders are required to have an existing Drift account, as well as set up a `RevenueShareAccount`
 
 - **User Onboarding:**  
 Before placing any orders, users must approve the builder and the maximum allowed builder fee.  
-This creates or updates the user's `ApprovedBuildersMap` account.
+This approval is stored directly inside the `RevenueShareEscrow` account.
 
 ### How Builder Codes Work
 
 1. **Order Placement**  
-   The builder’s app constructs a `place_order` transaction, specifying the builder’s public key and fee (up to the user-approved max).  
-   The user’s `ApprovedBuildersMap` and `RevenueShareEscrow` are included for program verification.
+   The builder’s app constructs a `place_order` transaction, which includes their `builderIdx` and `builderFee` in the signed order params 
+   The `RevenueShareEscrow` account is included in the transaction so the program can validate and record the order.
 
 2. **Fee Accrual (Per Order)**  
-   When an order is filled, the builder’s fee is credited per-order into the user’s `RevenueShareEscrow` account. Funds accumulate here until settlement.
+   When an order is filled, the fee is credited to the user’s `RevenueShareEscrow` as a `RevenueShareOrder`:
+   - This tracks builder’s pubkey, `feesAccrued`, `orderId`, `feeBps`, market type (spot or perp), and completion status.
+   - Fees remain in escrow until settlement.
 
 3. **Settlement**  
-   When the user calls `SettlePnl`, all pending builder rewards are swept from their escrow to the respective builder’s `RevenueShare` account(s).  
-   Builders/referrers then move these rewards into their Drift account positions with `settle_revenue_share`.
+   On `settle_pnl`, any accrued fees in the escrow are swept to the builder’s `RevenueShareAccount`:
 
 ### Notes on builder codes for MM’s
 
@@ -44,16 +45,17 @@ This creates or updates the user's `ApprovedBuildersMap` account.
 
 **Error Handling:**  If a required escrow account isn’t included, the program will throw. Therefore it's recommended to always include it.
 
-**Potential optimization:**  MM’s can pre-compute user > escrow account mappings to optimize tx size and speed.
-
 ### FAQ
 
 **Q: Can a user approve multiple builders?**  
-A: Yes, users can have multiple builders in their `ApprovedBuildersMap`, each with a specified max fee. Orders can be routed through any approved builder.
+A: Yes. Each builder entry in `approvedBuilders` has its own max fee bps.
 
 **Q: How are builder fees capped?**  
 A: A: The protocol enforces the user-approved max fee per builder. Attempts to go over will result in a transaction failure.
 
 **Q: Do MM’s or fillers need to know the builder/referrer accounts for every order?**  
 A: No, but including the `RevenueShareEscrow` is required to process reward accrual and settlement.
+
+**Q: When are builder rewards paid?**  
+A: On the user’s `settle_pnl` call (which sweeps escrowed fees to the builder).
 
