--- a/pages/0to1(not thiel).mdx
+++ b/pages/0to1(not thiel).mdx
@@ -4,7 +4,7 @@ This guide provides an intro for experienced traders and builders integrating wi
 
 ## 1. Why Drift
 
-Drift has become the **largest perp DEX on Solana**, with over **$100B in trading volume** and more than **$1.5B in deposits**【42†source】. Drift’s vision is to deliver **CEX-quality execution** with **DeFi transparency and guarantees**.  
+Drift has become the **largest perp DEX on Solana**, with over **$100B in trading volume** and more than **$1.5B in deposits**. Drift’s vision is to deliver **CEX-quality execution** with **DeFi transparency and guarantees**.  
 
 Key differentiators:
 
