--- a/pages/0to1(not thiel).mdx
+++ b/pages/0to1(not thiel).mdx
@@ -9,10 +9,9 @@ Drift has become the **largest perp DEX on Solana**, with over **$100B in tradin
 Key differentiators:
 
 - **Unified Cross-Margin System:** All assets (spot, perp, lending, LP shares) exist within one margin framework. Capital can be reused across positions.  
-- **Deep Multi-Layered Liquidity:** Drift combines **DLOB resting orders, JIT liquidity, AMM reserves, and Swift routing** to maximize fill quality.  
-- **Gasless & Fast Execution:** Through **Swift**, takers trade without paying gas, and makers receive orders instantly via WebSocket.  
-- **Permissionless Access:** Any trader, builder, or market maker can participate.  
-- **Incentivization via DRIFT staking:** Reduced taker fees, maker rebates up to 40%, and priority access to Swift order flow.  
+- **Multi layered Liquidity:** Drift combines **DLOB resting orders, JIT liquidity, AMM reserves, and Swift routing** to maximize fill quality.  
+- **Gasless + Fast Execution:** Through **Swift**, takers trade without paying gas, and makers receive orders instantly via websocket.
+- **Competitive fees and rebates:** Reduced taker fees, maker rebates up to 40%, and priority access to Swift order flow.  
 
 ## 2. Order Matching & Auction Design
 
